[Add] cf7 preview

--- a/cf7-preview.html
+++ b/cf7-preview.html
@@ -10,7 +10,7 @@
 
 	gtag('config', 'G-J9KSS1W2KE');
 	</script>
-	<title>SMTP Mail - Documentation</title>
+	<title>Preview Form - Documentation</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,7 +56,7 @@
 						</form>
 					</div>
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex"> </ul><!--//social-list-->
-					<a href="https://wordpress.org/plugin/smtp-mail" class="btn btn-primary d-none d-lg-flex" target="_blank">Download</a>
+					<a href="https://wordpress.org/plugin/cf7-preview" class="btn btn-primary d-none d-lg-flex" target="_blank">Download</a>
 				</div><!--//docs-top-utilities-->
 			</div><!--//container-->
 		</div><!--//branding-->
@@ -82,11 +82,13 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-2-1">Add New Plugin</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-2-2">Download Plugin</a></li>
 					<li class="nav-item section-title mt-3">
-						<a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-gears"></i></span>Settings</a>
+						<a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-box"></i></span>Contact Form 7</a>
 					</li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-1">General</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-2">Send test</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-3">Data</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-1">Preview Tab</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-2">Preview Form</a></li>
+					<li class="nav-item section-title mt-3">
+						<a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder me-2"><i class="fab fa-youtube"></i></span>Youtube</a>
+					</li>
 				</ul>
 			</nav><!--//docs-nav-->
 		</div><!--//docs-sidebar-->
@@ -97,10 +99,10 @@
 				</article>
 				<article class="docs-article" id="section-1">
 					<header class="docs-header">
-						<h2 class="docs-heading">Introduction <span class="docs-time">Last updated: 2023-12-16</span>
+						<h2 class="docs-heading">Introduction <span class="docs-time">Last updated: 2023-12-25</span>
 						</h2>
 						<section class="docs-intro">
-							<p>SMTP settings, mail function, send test, save submited data ( phpmailer ). It is very easy to configure and fast.</p>
+							<p>The preview form for Contact Form 7.</p>
 							<div class="mb-3">
 								<label for="website-url" class="form-label fw-bold">Website URL to apply all URL in document.</label>
 								<input type="url" class="form-control" id="website-url" placeholder="https://example.com" value="https://example.com" />
@@ -128,26 +130,26 @@
 					</header>
 					<section class="docs-section" id="item-2-1">
 						<h3 class="section-heading">Add New Plugin</h3>
-						<p>1. Go to <a class="website-url" href="/wp-admin/plugin-install.php?s=photoboxone&tab=search&type=term" target="_blank">wp-admin/plugin-install.php</a> &rarr; search <strong>photoboxone</strong> &rarr; click <strong>Install Now</strong>.</p>
+						<p>1. Go to <a class="website-url" href="/wp-admin/plugin-install.php?s=devui&tab=search&type=term" target="_blank">wp-admin/plugin-install.php</a> &rarr; search <strong>devui</strong> &rarr; click <strong>Install Now</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-01.png" alt="" class="img-fluid">
+							<img src="uploads/cf7-preview/img-cf7-preview-01.png" alt="" class="img-fluid">
 						</figure>
 						<p>2. Click <strong>Active</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-02.png" alt="" class="img-fluid">
+							<img src="uploads/cf7-preview/img-cf7-preview-02.png" alt="" class="img-fluid">
 						</figure>
 					</section><!--//section-->
 					<section class="docs-section" id="item-2-2">
 						<h3 class="section-heading">Download Plugin</h3>
-						<p>1. Go to <a href="https://wordpress.org/plugins/search/photoboxone" target="_blank">https://wordpress.org/plugins/</a> and search <strong>photoboxone</strong>.</p>
+						<p>1. Go to <a href="https://wordpress.org/plugins/search/devui" target="_blank">https://wordpress.org/plugins/</a> and search <strong>devui</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-03.png" alt="" class="figure-img img-fluid shadow rounded">
+							<img src="uploads/cf7-preview/img-cf7-preview-03.png" alt="" class="figure-img img-fluid shadow rounded">
 						</figure>
-						<p>2. Click <a href="https://wordpress.org/plugins/smtp-mail/" target="_blank"><strong>SMTP Mail</strong></a> plugin and click <strong>Download</strong> button.</p>
+						<p>2. Click <a href="https://wordpress.org/plugins/cf7-preview/" target="_blank"><strong>Preview Form</strong></a> plugin and click <strong>Download</strong> button.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-04.png" alt="" class="figure-img img-fluid shadow rounded">
+							<img src="uploads/cf7-preview/img-cf7-preview-04.png" alt="" class="figure-img img-fluid shadow rounded">
 						</figure>
-						<p>3. Go to <a class="website-url" href="/wp-admin/plugin-install.php?s=photoboxone&tab=search&type=term" target="_blank">wp-admin/plugin-install.php</a> &rarr; click <strong>Upload Plugin</strong> &rarr; click <strong>Choose File</strong> &rarr; click <strong>Install Now</strong>.</p>
+						<p>3. Go to <a class="website-url" href="/wp-admin/plugin-install.php" target="_blank">wp-admin/plugin-install.php</a> &rarr; click <strong>Upload Plugin</strong> &rarr; click <strong>Choose File</strong> &rarr; click <strong>Install Now</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
 							<img src="assets/images/upload-plugin.png" alt="" class="figure-img img-fluid shadow rounded">
 						</figure>
@@ -156,126 +158,46 @@
 				</article><!--//docs-article-->
 				<article class="docs-article" id="section-3">
 					<header class="docs-header">
-						<h2 class="section-heading">Settings</h2>
+						<h2 class="section-heading">Contact Form 7</h2>
 						<section class="docs-intro">
-							<p>Go to <a class="website-url" href="/wp-admin/options-general.php?page=smtpmail-setting" target="_blank">wp-admin/options-general.php?page=smtpmail-setting</a>.</p>
+							<p>1. Go to <a class="website-url" href="/wp-admin/admin.php?page=wpcf7" target="_blank">wp-admin/admin.php?page=wpcf7</a>.</p>
+							<figure class="figure docs-figure py-3 text-center">
+								<img src="uploads/cf7-preview/img-cf7-preview-05.png" alt="" class="img-fluid">
+							</figure>
+							<p>2. Click <strong>Edit</strong> form.</p>
 							<h5>Menu Tabs</h5>
 							<ol>
-								<li><a class="scrollto" href="#item-3-1">General</a></li>
-								<li><a class="scrollto" href="#item-3-2">Send test</a></li>
-								<li><a class="scrollto" href="#item-3-3">Data</a></li>
+								<li><a class="scrollto" href="#item-3-1">Preview Tab</a></li>
+								<li><a class="scrollto" href="#item-3-2">Preview Form</a></li>
 							</ol>
 						</section><!--//docs-intro-->
 					</header>
 					<section class="docs-section" id="item-3-1">
-						<h3 class="section-heading">General</h3>
-						<p>Go to the <a class="website-url" href="/wp-admin/options-general.php?page=smtpmail-setting" target="_blank">General</a> tab.</p>
-						<h4>Mail type: <strong>Mail</strong></h4>
-						<p>Send mail by function <code>mail()</code> of <a href="https://www.php.net/manual/en/function.mail.php" target="_blank">php</a>.</p>
+						<h3 class="section-heading">Preview Tab</h3>
+						<p>Go to the <strong>Preview</strong> tab.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-05.png" alt="" class="img-fluid">
+							<img src="uploads/cf7-preview/img-cf7-preview-06.png" alt="" class="img-fluid">
 						</figure>
-						<h4>Mail type: <strong>SMTP</strong></h4>
+						<p>Click <strong>link</strong> below <strong>Select Page to preview</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-07.png" alt="" class="img-fluid">
+							<img src="uploads/cf7-preview/img-cf7-preview-07.png" alt="" class="img-fluid">
 						</figure>
-						<h5>Custom value for SSL</h5>
-						<div class="table-responsive my-4">
-							<table class="table table-bordered">
-								<tr>
-									<th class="theme-bg-light">SMTP Secure</th>
-									<td>SSL</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Port</th>
-									<td>465 (gmail)</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Username</th>
-									<td>username@gmail.com</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Password</th>
-									<td>password</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Email</th>
-									<td>username@gmail.com</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Name</th>
-									<td>Your sitename</td>
-								</tr>
-							</table>
-						</div>
-						<h5>Custom value for TLS</h5>
-						<div class="table-responsive my-4">
-							<table class="table table-bordered">
-								<tr>
-									<th class="theme-bg-light">SMTP Secure</th>
-									<td>TLS</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Port</th>
-									<td>587 (gmail)</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Username</th>
-									<td>username@gmail.com</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">Password</th>
-									<td>password</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Email</th>
-									<td>username@gmail.com</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Name</th>
-									<td>Your sitename</td>
-								</tr>
-							</table>
-						</div>
-						<p><a href="https://docs.cpanel.net/cpanel/email/set-up-mail-client/#mail-client-manual-settings" target="_blank">cPanel documentation</a></p>
-						<h4>Mail type: <strong>SendGrid</strong></h4>
-						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-08.png" alt="" class="img-fluid">
-						</figure>
-						<h5>Custom value</h5>
-						<div class="table-responsive my-4">
-							<table class="table table-bordered">
-								<tr>
-									<th class="theme-bg-light">SendGrid API Key</th>
-									<td>q6yhiDxyvmNRlsH3aMXQpElFssXVUbQE3NVPV</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Email</th>
-									<td>noreply@example.com</td>
-								</tr>
-								<tr>
-									<th class="theme-bg-light">From Name</th>
-									<td>Your sitename</td>
-								</tr>
-							</table>
-						</div>
-						<p><a href="https://docs.sendgrid.com/api-reference/api-keys/create-api-keys" target="_blank">SendGrid documentation</a></p>
 					</section><!--//section-->
 					<section class="docs-section" id="item-3-2">
-						<h3 class="section-heading">Send test</h3>
-						<p>Go to the <a class="website-url" href="/wp-admin/options-general.php?page=smtpmail-setting&tab=test" target="_blank">Send test</a> tab.</p>
+						<h3 class="section-heading">Preview Form</h3>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-06.png" alt="" class="figure-img img-fluid shadow rounded">
+							<img src="uploads/cf7-preview/img-cf7-preview-08.png" alt="" class="img-fluid">
 						</figure>
 					</section><!--//section-->
-					<section class="docs-section" id="item-3-3">
-						<h3 class="section-heading">Data</h3>
-						<p>Go to the <a class="website-url" href="/wp-admin/options-general.php?page=smtpmail-setting&tab=data" target="_blank">Data</a> tab.</p>
-						<p> You need enable option `Save data SendMail` in the <a class="scrollto" href="#item-3-1">General</a> tab.</p>
-						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/smtp-mail/img-smtp-mail-09.png" alt="" class="figure-img img-fluid shadow rounded">
-						</figure>
-					</section><!--//section-->
+				</article><!--//docs-article-->
+				<article class="docs-article" id="section-4">
+					<header class="docs-header">
+						<h2 class="section-heading">Youtube</h2>
+						<section class="docs-intro">
+							<p>Go to <a href="https://youtu.be/8Qh2LI4dE_c" target="_blank">https://youtu.be/8Qh2LI4dE_c</a>.</p>
+							<div class="yt-player" id="8Qh2LI4dE_c"></div>
+						</section><!--//docs-intro-->
+					</header>
 				</article><!--//docs-article-->
 				<article class="docs-article">
 					<section class="docs-section d-none ads-section"></section>
