--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<div class="card-text">
 									The preview form for Contact Form 7.
 								</div>
-								<a class="card-link-mask" href="#"></a>
+								<a class="card-link-mask" href="cf7-preview.html"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
