[Update] ads section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="page-content">
 		<div class="container">
 			<div class="docs-overview py-5">
-				<div class="row justify-content-center">
+				<div class="row">
 					<div class="col-12 col-lg-4 py-3">
 						<div class="card shadow-sm">
 							<div class="card-body">
@@ -122,7 +122,7 @@
 									<span class="theme-icon-holder card-icon-holder me-2">
 										<i class="fas fa-table-columns"></i>
 									</span><!--//card-icon-holder-->
-									<span class="card-title-text">Admin Columns</span>
+									<span class="card-title-text">Admin Column</span>
 								</h5>
 								<div class="card-text">
 									Customise columns on the administration screens for posts, pages and users.
@@ -132,6 +132,7 @@
 						</div><!--//card-->
 					</div><!--//col-->
 				</div><!--//row-->
+				<div class="d-none ads-section mt-3"></div>
 			</div><!--//container-->
 		</div><!--//container-->
 	</div><!--//page-content-->
