[Add] Advanced Custom Data

--- a/advanced-custom-data.html
+++ b/advanced-custom-data.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J9KSS1W2KE"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-J9KSS1W2KE');
-	</script>
-	<title>Preview Form - Documentation</title>
+	<title>Advanced Custom Data - Documentation</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,7 +45,7 @@
 						</form>
 					</div>
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex"> </ul><!--//social-list-->
-					<a href="https://wordpress.org/plugin/cf7-preview" class="btn btn-primary d-none d-lg-flex" target="_blank">Download</a>
+					<a href="https://wordpress.org/plugin/advanced-custom-data" class="btn btn-primary d-none d-lg-flex" target="_blank">Download</a>
 				</div><!--//docs-top-utilities-->
 			</div><!--//container-->
 		</div><!--//branding-->
@@ -80,13 +71,19 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-2-1">Add New Plugin</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-2-2">Download Plugin</a></li>
 					<li class="nav-item section-title mt-3">
-						<a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-box"></i></span>Contact Form 7</a>
+						<a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-database"></i></span>Advanced Data</a>
 					</li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-1">Preview Tab</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-2">Preview Form</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-1">Edit Data</a></li>
 					<li class="nav-item section-title mt-3">
-						<a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder me-2"><i class="fab fa-youtube"></i></span>Youtube</a>
+						<a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder me-2"><i class="fas fa-box"></i></span>Contact Form 7</a>
 					</li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Edit Form</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">Preview Form</a></li>
+					<li class="nav-item section-title mt-3">
+						<a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder me-2"><i class="fas fa-box"></i></span>Advanced Custom Fields</a>
+					</li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-1">Edit Field</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-2">Custom Field</a></li>
 				</ul>
 			</nav><!--//docs-nav-->
 		</div><!--//docs-sidebar-->
@@ -96,12 +93,12 @@
 					<section class="docs-section d-none ads-section"></section>
 				</article>
 				<article class="docs-article" id="section-1">
-					<h1 class="docs-heading">The Preview Form plugin</h1>
+					<h1 class="docs-heading">The Advanced Custom Data plugin</h1>
 					<header class="docs-header">
-						<h2 class="docs-heading">Introduction <span class="docs-time">Last updated: 2023-12-25</span>
+						<h2 class="docs-heading">Introduction <span class="docs-time">Last updated: 2023-12-27</span>
 						</h2>
 						<section class="docs-intro">
-							<p>The preview form for Contact Form 7.</p>
+							<p>The Advanced Custom Data to display anywhere.</p>
 							<div class="mb-3">
 								<label for="website-url" class="form-label fw-bold">Website URL to apply all URL in document.</label>
 								<input type="url" class="form-control" id="website-url" placeholder="https://example.com" value="https://example.com" />
@@ -129,24 +126,24 @@
 					</header>
 					<section class="docs-section" id="item-2-1">
 						<h3 class="section-heading">Add New Plugin</h3>
-						<p>1. Go to <a class="website-url" href="/wp-admin/plugin-install.php?s=devui&tab=search&type=term" target="_blank">wp-admin/plugin-install.php</a> &rarr; search <strong>devui</strong> &rarr; click <strong>Install Now</strong>.</p>
+						<p>1. Go to <a class="website-url" href="/wp-admin/plugin-install.php?s=advanced+custom+data+devui&tab=search&type=term" target="_blank">wp-admin/plugin-install.php</a> &rarr; search <strong>advanced custom data devui</strong> &rarr; click <strong>Install Now</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-01.png" alt="" class="img-fluid">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-01.png" alt="" class="img-fluid">
 						</figure>
 						<p>2. Click <strong>Active</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-02.png" alt="" class="img-fluid">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-02.png" alt="" class="img-fluid">
 						</figure>
 					</section><!--//section-->
 					<section class="docs-section" id="item-2-2">
 						<h3 class="section-heading">Download Plugin</h3>
-						<p>1. Go to <a href="https://wordpress.org/plugins/search/devui" target="_blank">https://wordpress.org/plugins/</a> and search <strong>devui</strong>.</p>
+						<p>1. Go to <a href="https://wordpress.org/plugins/search/advanced+custom+data+devui" target="_blank">https://wordpress.org/plugins/</a> and search <strong>advanced custom data devui</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-03.png" alt="" class="figure-img img-fluid shadow rounded">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-03.png" alt="" class="figure-img img-fluid shadow rounded">
 						</figure>
-						<p>2. Click <a href="https://wordpress.org/plugins/cf7-preview/" target="_blank"><strong>Preview Form</strong></a> plugin and click <strong>Download</strong> button.</p>
+						<p>2. Click <a href="https://wordpress.org/plugins/advanced-custom-data/" target="_blank"><strong>Advanced Custom Data</strong></a> plugin and click <strong>Download</strong> button.</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-04.png" alt="" class="figure-img img-fluid shadow rounded">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-04.png" alt="" class="figure-img img-fluid shadow rounded">
 						</figure>
 						<p>3. Go to <a class="website-url" href="/wp-admin/plugin-install.php" target="_blank">wp-admin/plugin-install.php</a> &rarr; click <strong>Upload Plugin</strong> &rarr; click <strong>Choose File</strong> &rarr; click <strong>Install Now</strong>.</p>
 						<figure class="figure docs-figure py-3 text-center">
@@ -157,6 +154,28 @@
 				</article><!--//docs-article-->
 				<article class="docs-article" id="section-3">
 					<header class="docs-header">
+						<h2 class="section-heading">Advanced Data</h2>
+						<section class="docs-intro">
+							<p>1. Go to <a class="website-url" href="/wp-admin/edit.php?post_type=acd-data" target="_blank">wp-admin/edit.php?post_type=acd-data</a>.</p>
+							<figure class="figure docs-figure py-3 text-center">
+								<img src="uploads/advanced-custom-data/img-advanced-custom-data-05.png" alt="" class="img-fluid">
+							</figure>
+							<p>2. Click <strong>Edit</strong> data.</p>
+						</section><!--//docs-intro-->
+					</header>
+					<section class="docs-section" id="item-3-1">
+						<h3 class="section-heading">Data type List</h3>
+						<figure class="figure docs-figure py-3 text-center">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-06.png" alt="" class="img-fluid">
+						</figure>
+						<h3 class="section-heading">Data type Script</h3>
+						<figure class="figure docs-figure py-3 text-center">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-07.png" alt="" class="img-fluid">
+						</figure>
+					</section><!--//section-->
+				</article><!--//docs-article-->
+				<article class="docs-article" id="section-4">
+					<header class="docs-header">
 						<h2 class="section-heading">Contact Form 7</h2>
 						<section class="docs-intro">
 							<p>1. Go to <a class="website-url" href="/wp-admin/admin.php?page=wpcf7" target="_blank">wp-admin/admin.php?page=wpcf7</a>.</p>
@@ -164,39 +183,54 @@
 								<img src="uploads/cf7-preview/img-cf7-preview-05.png" alt="" class="img-fluid">
 							</figure>
 							<p>2. Click <strong>Edit</strong> form.</p>
-							<h5>Menu Tabs</h5>
-							<ol>
-								<li><a class="scrollto" href="#item-3-1">Preview Tab</a></li>
-								<li><a class="scrollto" href="#item-3-2">Preview Form</a></li>
-							</ol>
 						</section><!--//docs-intro-->
 					</header>
-					<section class="docs-section" id="item-3-1">
-						<h3 class="section-heading">Preview Tab</h3>
-						<p>Go to the <strong>Preview</strong> tab.</p>
+					<section class="docs-section" id="item-4-1">
+						<h3 class="section-heading">Form tab</h3>
+						<p>
+							Insert advanced data intro field<br>
+							<code>[select your-subject <b>acd-data:17</b>]</code>
+						</p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-06.png" alt="" class="img-fluid">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-08.png" alt="" class="img-fluid">
 						</figure>
-						<p>Click <strong>link</strong> below <strong>Select Page to preview</strong>.</p>
+					</section>
+					<section class="docs-section" id="item-4-2">
+						<h3 class="section-heading">Preview tab</h3>
+						<p>You can install <a href="cf7-preview.html">preview form plugin</a></p>
 						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-07.png" alt="" class="img-fluid">
-						</figure>
-					</section><!--//section-->
-					<section class="docs-section" id="item-3-2">
-						<h3 class="section-heading">Preview Form</h3>
-						<figure class="figure docs-figure py-3 text-center">
-							<img src="uploads/cf7-preview/img-cf7-preview-08.png" alt="" class="img-fluid">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-09.png" alt="" class="img-fluid">
 						</figure>
 					</section><!--//section-->
 				</article><!--//docs-article-->
-				<article class="docs-article" id="section-4">
+				<article class="docs-article" id="section-5">
 					<header class="docs-header">
-						<h2 class="section-heading">Youtube</h2>
+						<h2 class="section-heading">Advanced Custom Fields</h2>
 						<section class="docs-intro">
-							<p>Go to <a href="https://youtu.be/8Qh2LI4dE_c" target="_blank">https://youtu.be/8Qh2LI4dE_c</a>.</p>
-							<div class="yt-player" id="8Qh2LI4dE_c"></div>
+							<p>1. Go to <a class="website-url" href="/wp-admin/edit.php?post_type=acf-field-group" target="_blank">wp-admin/edit.php?post_type=acf-field-group</a>.</p>
+							<figure class="figure docs-figure py-3 text-center">
+								<img src="uploads/advanced-custom-data/img-advanced-custom-data-10.png" alt="" class="img-fluid">
+							</figure>
+							<p>2. Click <strong>Edit</strong> field group.</p>
 						</section><!--//docs-intro-->
 					</header>
+					<section class="docs-section" id="item-5-1">
+						<h3 class="section-heading">Edit field</h3>
+						<figure class="figure docs-figure py-3 text-center">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-11.png" alt="" class="img-fluid">
+						</figure>
+					</section>
+					<section class="docs-section" id="item-5-2">
+						<h3 class="section-heading">Custom field</h3>
+						<p>1. Go to <a class="website-url" href="/wp-admin/edit.php" target="_blank">wp-admin/edit.php</a>.</p>
+						<figure class="figure docs-figure py-3 text-center">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-12.png" alt="" class="img-fluid">
+						</figure>
+						<p>2. Click <strong>Edit</strong> post.</p>
+						<figure class="figure docs-figure py-3 text-center">
+							<img src="uploads/advanced-custom-data/img-advanced-custom-data-13.png" alt="" class="img-fluid">
+						</figure>
+					</section><!--//section-->
 				</article><!--//docs-article-->
 				<article class="docs-article">
 					<section class="docs-section d-none ads-section"></section>
