--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 	<link rel="stylesheet" href="assets/plugins/simplelightbox/simple-lightbox.min.css">
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
-	<!-- Docs CSS -->
-	<link id="theme-style" rel="stylesheet" href="assets/css/docs.css">
 </head>
 <body>
 	<header class="header fixed-top">
@@ -111,7 +109,7 @@
 								<div class="card-text">
 									The Advanced Custom Data to display anywhere.
 								</div>
-								<a class="card-link-mask" href="#"></a>
+								<a class="card-link-mask" href="advanced-custom-data.html"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
