--- a/smtp-mail.html
+++ b/smtp-mail.html
@@ -27,8 +27,6 @@
 	<link rel="stylesheet" href="assets/plugins/simplelightbox/simple-lightbox.min.css">
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
-	<!-- Docs CSS -->
-	<link id="theme-style" rel="stylesheet" href="assets/css/docs.css">
 </head>
 <body class="docs-page">
 	<header class="header fixed-top">
@@ -43,7 +41,7 @@
 					</button>
 					<div class="site-logo">
 						<a class="navbar-brand" href="index.html">
-							<img class="logo-icon me-2" src="assets/images/logo-32x32.png" alt="smtp-mail">
+							<img class="logo-icon me-2" src="assets/images/logo-32x32.png" alt="">
 							<span class="logo-text" title="PhotoBoxOne">PB One</span>
 						</a>
 					</div>
@@ -96,6 +94,7 @@
 					<section class="docs-section d-none ads-section"></section>
 				</article>
 				<article class="docs-article" id="section-1">
+					<h1 class="docs-heading">The SMTP Mail plugin</h1>
 					<header class="docs-header">
 						<h2 class="docs-heading">Introduction <span class="docs-time">Last updated: 2023-12-16</span>
 						</h2>
