[Update] all js

--- a/smtp-mail.html
+++ b/smtp-mail.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J9KSS1W2KE"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-J9KSS1W2KE');
-	</script>
 	<title>SMTP Mail - Documentation</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -27,6 +18,22 @@
 	<link rel="stylesheet" href="assets/plugins/simplelightbox/simple-lightbox.min.css">
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-J9KSS1W2KE"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-J9KSS1W2KE');
+	</script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-5261703613038425",
+			enable_page_level_ads: true
+		});
+	</script>
 </head>
 <body class="docs-page">
 	<header class="header fixed-top">
