[Update] ads.js

--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
 
 	gtag('config', 'G-J9KSS1W2KE');
 	</script>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({
-			google_ad_client: "ca-pub-5261703613038425",
-			enable_page_level_ads: true
-		});
-	</script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5261703613038425" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="header fixed-top">
