[Update] ads test

--- a/index.html
+++ b/index.html
@@ -131,7 +131,20 @@
 						</div><!--//card-->
 					</div><!--//col-->
 				</div><!--//row-->
-				<div class="d-none ads-section mt-3"></div>
+				<div class="mt-3">
+					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5261703613038425"
+						crossorigin="anonymous"></script>
+					<!-- Responsive - Adsense Code -->
+					<ins class="adsbygoogle"
+						style="display:block"
+						data-ad-client="ca-pub-5261703613038425"
+						data-ad-slot="8088219191"
+						data-ad-format="auto"
+						data-full-width-responsive="true"></ins>
+					<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 			</div><!--//container-->
 		</div><!--//container-->
 	</div><!--//page-content-->
